<resources>
    <!--App Message-->
    <string name="app_name">RappiTest</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">An error has occurred trying to connect to server!</string>
    <string name="some_error">Some error occurred trying to connect to server!</string>
    <string name="connection_error">Internet connection lost!</string>
    <string name="all_loading_msg">Loading...</string>

    <!-- List Message -->
    <string name="list_hint_search">Search movie by name, rating or year</string>
    <string name="list_msg_no_items">No items found</string>
    <string name="list_tab_1">Popular</string>
    <string name="list_tab_2">Top Rated</string>
    <string name="list_tab_3">Upcoming</string>
    <string name="list_switch_text">Offline mode</string>

    <!-- Detail Message -->
    <string name="detail_label_overview">Overview</string>
    <string name="detail_label_language">Language</string>
    <string name="detail_label_adult_content">Adult Content</string>
    <string name="detail_label_release_date">Release Date</string>
    <string name="detail_label_popularity">Popularity</string>
</resources>
