<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <android.support.v7.widget.SwitchCompat
        android:id="@+id/simple_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:checked="false"
        android:gravity="right|center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/list_switch_text"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="2dp"
        android:visibility="gone">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:src="@android:drawable/ic_menu_search" />

        <EditText
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/list_hint_search"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@android:color/secondary_text_dark"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:onClick="onClickDeleteListener"
            android:padding="5dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/light_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/label_no_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/list_msg_no_items"
            android:textSize="14sp"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>