<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:onClick="onClickBack"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_revert" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:shadowColor="@android:color/white"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="15"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="15"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_star_detail" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/detail_label_name"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_overview" />

                <TextView
                    android:id="@+id/overview"
                    style="@style/detail_label_value"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/detail_label_name"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_language" />

                <TextView
                    android:id="@+id/language"
                    style="@style/detail_label_value"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/detail_label_name"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_adult_content" />

                <TextView
                    android:id="@+id/adult_content"
                    style="@style/detail_label_value"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/detail_label_name"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_release_date" />

                <TextView
                    android:id="@+id/release_date"
                    style="@style/detail_label_value"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/detail_label_name"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_popularity" />

                <TextView
                    android:id="@+id/popularity"
                    style="@style/detail_label_value"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
